--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,38 @@
-:root {
-    --lower-heigh: 100px
+/* Blocchi */
+.container {
+    display: flex;
+    height: calc(100vh - 60px);
+
 }
+/* Elementi del blocco container */
+.container__sidebar {
+    width: 200px;
+}
+
+.container__main-content {
+   display: flex;
+   flex-direction: column;
+   height: calc(100vh - 60px);
+   width: calc(100% - 200px);
+}
+/* Blocchi all'interno di container__main-content */
+.main-content__header {
+    height: 50px;
+}
+.main-content__main {
+    /* tolto footer */
+    height: calc(100vh - 50px - 60px); 
+}
+
+.footer {
+    height: 60px;
+}
+
+/* Esempio di modificatori (se ne hai bisogno) */
+/* .container__sidebar--collapsed {
+    /* Inserisci gli stili per il modificatore collapsed dell'elemento sidebar */
+/* } */
+
+/* .footer--dark {
+    /* Inserisci gli stili per il modificatore dark del blocco footer */
+/* } */
