--- a/css/text.css
+++ b/css/text.css
@@ -26,3 +26,18 @@ h1 {
     font-style: normal;
   }
   
+
+/* ************************** SIDE BAR SPOTIFY ************************** */
+
+
+.navigation__item {
+}
+
+.sidebar__library {
+}
+
+.sidebar__create-playlist {
+}
+
+.playlists__item {
+}
