--- a/css/text.css
+++ b/css/text.css
@@ -1,43 +1,34 @@
 /* Paragrafo */
-* {
+/* * {
     color: white;
+} */
+
+/* palline UL rimosse */
+ul {
+  list-style-type: none;
 }
 
-p {
+/* p {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400; /* Puoi cambiare il valore a qualsiasi numero tra 100 e 900 */
+    font-weight: 400; 
     font-style: normal;
   }
-  
+   */
   /* Div */
-div {
+/* div {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400; /* Puoi cambiare il valore a qualsiasi numero tra 100 e 900 */
+    font-weight: 400; 
     font-style: normal;
   }
-  
+   */
   /* h1 */
-h1 {
+/* h1 {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 700; /* Solitamente i titoli hanno un peso maggiore, ma puoi regolare tra 100 e 900 */
+    font-weight: 700; 
     font-style: normal;
   }
   
-
-/* ************************** SIDE BAR SPOTIFY ************************** */
-
-
-.navigation__item {
-}
-
-.sidebar__library {
-}
-
-.sidebar__create-playlist {
-}
-
-.playlists__item {
-}
+ */
