--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    
+    
+}
+
+.container__main-content {
+    overflow: auto;
 }
 
 .main-content__highlights {
@@ -66,7 +72,6 @@ body > div > div.container__main-content > div > div.main-content__highlights > 
 }
 
 .main-content--container {
-    overflow: auto;
 }
 
 .recent-item__image {
