--- a/css/root.css
+++ b/css/root.css
@@ -11,7 +11,7 @@
 :root {
     --container-background-color: #141922;
     --container-sidebar-background-color: #000000;
-    --container-content-header-background-color: rgb(0, 0, 0);
+    --container-content-header-background-color: rgba(0, 0, 0, 0.391);
     --container-content-main-background-color: #141922;
     --container-footer-background-color: #313131;
 }
