--- a/css/footer.css
+++ b/css/footer.css
@@ -115,6 +115,8 @@ footer {
     height: 5px;
     width: 60%;
     background-color: grey;
+    display: flex;
+    align-items: center;
 }
 
 .progress__bar--white-space {
@@ -122,6 +124,20 @@ footer {
     width: 40%;
     background-color: white;
 }
+
+.pallina {
+    width: 13px;
+    height: 13px;
+    background-color: #ffffff; /* Colore della pallina */
+    border-radius: 50%; 
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    /* display: none; */
+}
+
+
+
+
 
 /* Sezione volume */
 .footer__section--volume {
